Problem solved: now the right font is displayed on firefox

--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@ svg {
   background-color: #87F2B7;
 }
 
-.titles {
+.titles, text, tspan {
+  font-size:13px;
   fill="#4D4D4D";
   font-family: 'Muli', sans-serif;
   text-transform: uppercase;
